删除不必要的服务，添加抽屉修改的逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,14 +32,18 @@
 
         </activity>
         <activity android:name=".EasyRecyClerView">
+
+
+        </activity>
+
+        <activity android:name=".doudou.DouMainActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
-        <service android:name=".broast.MyPlayService" />
     </application>
 
 </manifest>
