--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:support-v4:23.1.0'
     compile 'com.bartoszlipinski.recyclerviewheader:library:1.2.0'
-    compile 'com.jude:rollviewpager:1.0.4'
+    compile 'com.jude:rollviewpager:1.0.4'// 轮播的效果图
     // viewpager 广告轮播的图盘
-    compile 'com.jude:easyrecyclerview:3.2.2'
+    compile 'com.jude:easyrecyclerview:3.2.2' //简单处理的recyclerview 的格式
     //listview 头部 尾部机上布局
     compile 'com.facebook.fresco:fresco:0.8.1'
 }
